src/test/resources/fixtures/api/deprecated-ini-options.php
<?php

    <error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">ini_set('safe_mode', '')</error>;
    <error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">ini_get('safe_mode')</error>;
    <error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">ini_alter('safe_mode', '')</error>;
    <error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">ini_restore('safe_mode')</error>;